# fastapi-i18n-demo

./: README.md  babel.ini  errors.py  i18n.py  lazy_string.py  main.py  pyproject.toml
translations/es/LC_MESSAGES/: messages.po
translations/ja/LC_MESSAGES/: messages.po
